forced grub to stay in plain text mode

--- a/iso/boot/grub/grub.cfg
+++ b/iso/boot/grub/grub.cfg
@@ -1,5 +1,10 @@
 # GRUB Configuration for MiniOS
 
+# Force plain text console to avoid "no suitable video mode" on picky firmware
+terminal_input console
+terminal_output console
+set gfxpayload=text
+
 set timeout=5
 set default=0
 
